# technopark_C_hw2

./: .clang-format  .clangd  CMakeLists.txt  README.md  justfile
.github/workflows/: pull_request.yml
include/: array.h  errors.h  matrix.h
src/: main.cpp
test/: CMakeLists.txt  arrayTests.cpp  matrixTests.cpp
